base/cagea1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cagea1-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cagea1
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cagea1
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: cagea1
          image: lightstone1/cagea1.com-prod
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          volumeMounts:
            - name: application-data
              mountPath: /app/data
            - name: application-data
              mountPath: /app/public/uploads
              subPath: uploads
      volumes:
        - name: application-data
          persistentVolumeClaim:
            claimName: cagea1-data
