base/cagea1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cagea1-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: cagea1
