base/cagea1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cagea1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "32k"
spec:
  tls:
    - hosts:
        - cagea1.com
        - www.cagea1.com
      secretName: cagea1-tls
  rules:
    - host: cagea1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cagea1-service
                port:
                  number: 80
    - host: www.cagea1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cagea1-service
                port:
                  number: 80
